dirtywater/parser.output
   0  $accept : %entry% $end

   1  attack : EOF
   2         | obj_phrase EOF
   3         | obj_phrase WITH obj_phrase EOF
   4         | WITH obj_phrase EOF

   5  north : EOF

   6  east : EOF

   7  south : EOF

   8  west : EOF

   9  northeast : EOF

  10  northwest : EOF

  11  southeast : EOF

  12  southwest : EOF

  13  up : EOF

  14  down : EOF

  15  go : obj_phrase EOF

  16  inventory : EOF

  17  say : say_attributes WORD EOF

  18  take : obj_phrase EOF

  19  drop : obj_phrase EOF

  20  look : EOF
  21       | obj_phrase EOF
  22       | preposition obj_phrase EOF

  23  quit : EOF

  24  wait : EOF
  25       | NUMBER EOF

  26  obj_phrase : obj_phrase preposition noun_phrase
  27             | obj_phrase location
  28             | noun_phrase

  29  noun_phrase : article ord adjs WORD

  30  article :
  31          | ARTICLE

  32  ord :
  33      | ORDINAL

  34  adjs :
  35       | adjs WORD

  36  preposition : UNDER
  37              | ON
  38              | IN
  39              | FROM
  40              | OF

  41  location : BETWEEN noun_phrase AND noun_phrase
  42           | NEAR noun_phrase

  43  say_attributes :
  44                 | EMOTE say_attributes
  45                 | TARGET say_attributes

  46  %entry% : '\001' attack
  47          | '\002' north
  48          | '\003' east
  49          | '\004' west
  50          | '\005' south
  51          | '\006' northeast
  52          | '\007' northwest
  53          | '\010' southeast
  54          | '\011' southwest
  55          | '\012' down
  56          | '\013' up
  57          | '\014' go
  58          | '\015' drop
  59          | '\016' take
  60          | '\017' inventory
  61          | '\020' look
  62          | '\021' quit
  63          | '\022' wait
  64          | '\023' say

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	'\006'  shift 6
	'\007'  shift 7
	'\010'  shift 8
	'\011'  shift 9
	'\012'  shift 10
	'\013'  shift 11
	'\014'  shift 12
	'\015'  shift 13
	'\016'  shift 14
	'\017'  shift 15
	'\020'  shift 16
	'\021'  shift 17
	'\022'  shift 18
	'\023'  shift 19
	.  error

	%entry%  goto 20


state 1
	%entry% : '\001' . attack  (46)
	article : .  (30)

	ARTICLE  shift 21
	WITH  shift 22
	EOF  shift 23
	WORD  reduce 30
	ORDINAL  reduce 30

	attack  goto 24
	obj_phrase  goto 25
	noun_phrase  goto 26
	article  goto 27


state 2
	%entry% : '\002' . north  (47)

	EOF  shift 28
	.  error

	north  goto 29


state 3
	%entry% : '\003' . east  (48)

	EOF  shift 30
	.  error

	east  goto 31


state 4
	%entry% : '\004' . west  (49)

	EOF  shift 32
	.  error

	west  goto 33


state 5
	%entry% : '\005' . south  (50)

	EOF  shift 34
	.  error

	south  goto 35


state 6
	%entry% : '\006' . northeast  (51)

	EOF  shift 36
	.  error

	northeast  goto 37


state 7
	%entry% : '\007' . northwest  (52)

	EOF  shift 38
	.  error

	northwest  goto 39


state 8
	%entry% : '\010' . southeast  (53)

	EOF  shift 40
	.  error

	southeast  goto 41


state 9
	%entry% : '\011' . southwest  (54)

	EOF  shift 42
	.  error

	southwest  goto 43


state 10
	%entry% : '\012' . down  (55)

	EOF  shift 44
	.  error

	down  goto 45


state 11
	%entry% : '\013' . up  (56)

	EOF  shift 46
	.  error

	up  goto 47


state 12
	%entry% : '\014' . go  (57)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	go  goto 48
	obj_phrase  goto 49
	noun_phrase  goto 26
	article  goto 27


state 13
	%entry% : '\015' . drop  (58)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	drop  goto 50
	obj_phrase  goto 51
	noun_phrase  goto 26
	article  goto 27


state 14
	%entry% : '\016' . take  (59)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	take  goto 52
	obj_phrase  goto 53
	noun_phrase  goto 26
	article  goto 27


state 15
	%entry% : '\017' . inventory  (60)

	EOF  shift 54
	.  error

	inventory  goto 55


state 16
	%entry% : '\020' . look  (61)
	article : .  (30)

	ARTICLE  shift 21
	EOF  shift 56
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	WORD  reduce 30
	ORDINAL  reduce 30

	look  goto 62
	obj_phrase  goto 63
	preposition  goto 64
	noun_phrase  goto 26
	article  goto 27


state 17
	%entry% : '\021' . quit  (62)

	EOF  shift 65
	.  error

	quit  goto 66


state 18
	%entry% : '\022' . wait  (63)

	EOF  shift 67
	NUMBER  shift 68
	.  error

	wait  goto 69


state 19
	%entry% : '\023' . say  (64)
	say_attributes : .  (43)

	EMOTE  shift 70
	TARGET  shift 71
	WORD  reduce 43

	say  goto 72
	say_attributes  goto 73


state 20
	$accept : %entry% . $end  (0)

	$end  accept


state 21
	article : ARTICLE .  (31)

	.  reduce 31


state 22
	attack : WITH . obj_phrase EOF  (4)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	obj_phrase  goto 74
	noun_phrase  goto 26
	article  goto 27


state 23
	attack : EOF .  (1)

	.  reduce 1


state 24
	%entry% : '\001' attack .  (46)

	.  reduce 46


state 25
	attack : obj_phrase . EOF  (2)
	attack : obj_phrase . WITH obj_phrase EOF  (3)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	WITH  shift 75
	EOF  shift 76
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 26
	obj_phrase : noun_phrase .  (28)

	.  reduce 28


state 27
	noun_phrase : article . ord adjs WORD  (29)
	ord : .  (32)

	ORDINAL  shift 81
	WORD  reduce 32

	ord  goto 82


state 28
	north : EOF .  (5)

	.  reduce 5


state 29
	%entry% : '\002' north .  (47)

	.  reduce 47


state 30
	east : EOF .  (6)

	.  reduce 6


state 31
	%entry% : '\003' east .  (48)

	.  reduce 48


state 32
	west : EOF .  (8)

	.  reduce 8


state 33
	%entry% : '\004' west .  (49)

	.  reduce 49


state 34
	south : EOF .  (7)

	.  reduce 7


state 35
	%entry% : '\005' south .  (50)

	.  reduce 50


state 36
	northeast : EOF .  (9)

	.  reduce 9


state 37
	%entry% : '\006' northeast .  (51)

	.  reduce 51


state 38
	northwest : EOF .  (10)

	.  reduce 10


state 39
	%entry% : '\007' northwest .  (52)

	.  reduce 52


state 40
	southeast : EOF .  (11)

	.  reduce 11


state 41
	%entry% : '\010' southeast .  (53)

	.  reduce 53


state 42
	southwest : EOF .  (12)

	.  reduce 12


state 43
	%entry% : '\011' southwest .  (54)

	.  reduce 54


state 44
	down : EOF .  (14)

	.  reduce 14


state 45
	%entry% : '\012' down .  (55)

	.  reduce 55


state 46
	up : EOF .  (13)

	.  reduce 13


state 47
	%entry% : '\013' up .  (56)

	.  reduce 56


state 48
	%entry% : '\014' go .  (57)

	.  reduce 57


state 49
	go : obj_phrase . EOF  (15)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	EOF  shift 83
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 50
	%entry% : '\015' drop .  (58)

	.  reduce 58


state 51
	drop : obj_phrase . EOF  (19)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	EOF  shift 84
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 52
	%entry% : '\016' take .  (59)

	.  reduce 59


state 53
	take : obj_phrase . EOF  (18)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	EOF  shift 85
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 54
	inventory : EOF .  (16)

	.  reduce 16


state 55
	%entry% : '\017' inventory .  (60)

	.  reduce 60


state 56
	look : EOF .  (20)

	.  reduce 20


state 57
	preposition : UNDER .  (36)

	.  reduce 36


state 58
	preposition : ON .  (37)

	.  reduce 37


state 59
	preposition : IN .  (38)

	.  reduce 38


state 60
	preposition : FROM .  (39)

	.  reduce 39


state 61
	preposition : OF .  (40)

	.  reduce 40


state 62
	%entry% : '\020' look .  (61)

	.  reduce 61


state 63
	look : obj_phrase . EOF  (21)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	EOF  shift 86
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 64
	look : preposition . obj_phrase EOF  (22)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	obj_phrase  goto 87
	noun_phrase  goto 26
	article  goto 27


state 65
	quit : EOF .  (23)

	.  reduce 23


state 66
	%entry% : '\021' quit .  (62)

	.  reduce 62


state 67
	wait : EOF .  (24)

	.  reduce 24


state 68
	wait : NUMBER . EOF  (25)

	EOF  shift 88
	.  error


state 69
	%entry% : '\022' wait .  (63)

	.  reduce 63


state 70
	say_attributes : EMOTE . say_attributes  (44)
	say_attributes : .  (43)

	EMOTE  shift 70
	TARGET  shift 71
	WORD  reduce 43

	say_attributes  goto 89


state 71
	say_attributes : TARGET . say_attributes  (45)
	say_attributes : .  (43)

	EMOTE  shift 70
	TARGET  shift 71
	WORD  reduce 43

	say_attributes  goto 90


state 72
	%entry% : '\023' say .  (64)

	.  reduce 64


state 73
	say : say_attributes . WORD EOF  (17)

	WORD  shift 91
	.  error


state 74
	attack : WITH obj_phrase . EOF  (4)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	EOF  shift 92
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 75
	attack : obj_phrase WITH . obj_phrase EOF  (3)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	obj_phrase  goto 93
	noun_phrase  goto 26
	article  goto 27


state 76
	attack : obj_phrase EOF .  (2)

	.  reduce 2


state 77
	location : BETWEEN . noun_phrase AND noun_phrase  (41)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	noun_phrase  goto 94
	article  goto 27


state 78
	location : NEAR . noun_phrase  (42)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	noun_phrase  goto 95
	article  goto 27


state 79
	obj_phrase : obj_phrase preposition . noun_phrase  (26)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	noun_phrase  goto 96
	article  goto 27


state 80
	obj_phrase : obj_phrase location .  (27)

	.  reduce 27


state 81
	ord : ORDINAL .  (33)

	.  reduce 33


state 82
	noun_phrase : article ord . adjs WORD  (29)
	adjs : .  (34)

	.  reduce 34

	adjs  goto 97


state 83
	go : obj_phrase EOF .  (15)

	.  reduce 15


state 84
	drop : obj_phrase EOF .  (19)

	.  reduce 19


state 85
	take : obj_phrase EOF .  (18)

	.  reduce 18


state 86
	look : obj_phrase EOF .  (21)

	.  reduce 21


state 87
	look : preposition obj_phrase . EOF  (22)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	EOF  shift 98
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 88
	wait : NUMBER EOF .  (25)

	.  reduce 25


state 89
	say_attributes : EMOTE say_attributes .  (44)

	.  reduce 44


state 90
	say_attributes : TARGET say_attributes .  (45)

	.  reduce 45


state 91
	say : say_attributes WORD . EOF  (17)

	EOF  shift 99
	.  error


state 92
	attack : WITH obj_phrase EOF .  (4)

	.  reduce 4


state 93
	attack : obj_phrase WITH obj_phrase . EOF  (3)
	obj_phrase : obj_phrase . preposition noun_phrase  (26)
	obj_phrase : obj_phrase . location  (27)

	EOF  shift 100
	UNDER  shift 57
	ON  shift 58
	IN  shift 59
	FROM  shift 60
	OF  shift 61
	BETWEEN  shift 77
	NEAR  shift 78
	.  error

	preposition  goto 79
	location  goto 80


state 94
	location : BETWEEN noun_phrase . AND noun_phrase  (41)

	AND  shift 101
	.  error


state 95
	location : NEAR noun_phrase .  (42)

	.  reduce 42


state 96
	obj_phrase : obj_phrase preposition noun_phrase .  (26)

	.  reduce 26


state 97
	noun_phrase : article ord adjs . WORD  (29)
	adjs : adjs . WORD  (35)

	WORD  shift 102
	.  error


state 98
	look : preposition obj_phrase EOF .  (22)

	.  reduce 22


state 99
	say : say_attributes WORD EOF .  (17)

	.  reduce 17


state 100
	attack : obj_phrase WITH obj_phrase EOF .  (3)

	.  reduce 3


state 101
	location : BETWEEN noun_phrase AND . noun_phrase  (41)
	article : .  (30)

	ARTICLE  shift 21
	WORD  reduce 30
	ORDINAL  reduce 30

	noun_phrase  goto 103
	article  goto 27


state 102
	noun_phrase : article ord adjs WORD .  (29)
	adjs : adjs WORD .  (35)

	WITH  reduce 29
	AND  reduce 29
	EOF  reduce 29
	WORD  reduce 35
	UNDER  reduce 29
	ON  reduce 29
	IN  reduce 29
	FROM  reduce 29
	OF  reduce 29
	BETWEEN  reduce 29
	NEAR  reduce 29


state 103
	location : BETWEEN noun_phrase AND noun_phrase .  (41)

	.  reduce 41


38 terminals, 29 nonterminals
65 grammar rules, 104 states
